2408.	[bug]		A duplicate TCP dispatch event could be sent, which
			could then trigger an assertion failure in
			resquery_response().  [RT #18275]

2407.	[port]		hpux: test for sys/dyntune.h. [RT #18421]

2406.	[bug]		Sockets could be closed too early, leading to
			inconsistent states in the socket module. [RT #18298]

2404.	[port]		hpux: files unlimited support.

2403.	[bug]		TSIG context leak. [RT #18341]

2402.	[port]		Support Solaris 2.11 and over. [RT #18362]

2401.	[bug]		Expect to get E[MN]FILE errno internal_accept()
			(from accept() or fcntl() system calls). [RT #18358]

2399.	[bug]		Abort timeout queries to reduce the number of open
			UDP sockets. [RT #18367]

2396.	[bug]		Don't set SO_REUSEADDR for randomized ports.
			[RT #18336]

2395.	[port]		Avoid warning and no effect from "files unlimited"
			on Linux when running as root. [RT #18335]

2394.	[bug]		Default configuration options set the limit for
			open files to 'unlimited' as described in the
			documentation. [RT #18331]

2392.	[bug]		remove 'grep -q' from acl test script, some platforms
			don't support it. [RT #18253]

2391	[port]		hpux: cover additional recvmsg() error codes.
			[RT #18301]

2390	[bug]		dispatch.c could make a false warning on 'odd socket'.
			[RT #18301].

2389	[bug]		Move the "working directory writable" check to after
			the ns_os_changeuser() call. [RT #18326]

2386.	[func]		Add warning about too small 'open files' limit.
			[RT #18269]

	--- 9.4.3b2 released ---

2385.	[bug]		A condition variable in socket.c could leak in
			rare error handling [RT #17968].

2384.	[security]	Additional support for query port randomization (change
			#2375) including performance improvement and port range
			specification.  [RT #17949, #18098]

2383.	[bug]		named could double queries when they resulted in
			SERVFAIL due to overkilling EDNS0 failure detection.
			[RT #18182]

2382.	[doc]		Add descriptions of IPSECKEY, SPF and SSHFP to ARM.
